src/objects/Commentor__c.object
<CustomObject>
    <description>Box employee who leaves comments for a candidate.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Commentor&apos;s email address.</description>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If user is a department head or hiring manager, this field should be linked to its customer portal account</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commentors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commentor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>CommentorID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commentors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>